--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+
 /* CSS Document */
 
 /******************************
@@ -3527,10 +3528,10 @@ select option
 .footer .logo
 {
 	top: auto;
-	-webkit-transform: transform: none;
-    -moz-transform: transform: none;
-    -ms-transform: transform: none;
-    -o-transform: transform: none;
+	/* -webkit-transform: transform: none; */
+    /* -moz-transform: transform: none; */
+    /* -ms-transform: transform: none; */
+    /* -o-transform: transform: none; */
     transform: none;
 }
 .footer .logo a
